<resources>
    <string name="app_name">EventCountDown</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="event_title">Event Title</string>
    <string name="event_desc">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="swtich_text">Show Notification</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="left">left</string>
    <string name="ago">ago</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="delete_success">Deleted</string>
    <string name="update_success">Updated</string>
    <string name="insert_success">Inserted</string>
    <string name="dialog_message">Delete all Events?</string>
    <string name="dialog_title">Delete</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
</resources>
