<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.weilun.eventcountdown.ViewEventActivity">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Chinese New Year 2018" />

    <TextView
        android:id="@+id/view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Yaer of Earth DOg" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Frida, Febuary 16, 2018" />

    <TextView
        android:id="@+id/view_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="00:00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/countdown_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="47" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/day" />

        <TextView
            android:id="@+id/countdown_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="47" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/hour" />

        <TextView
            android:id="@+id/countdown_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="47" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/hour" />

        <TextView
            android:id="@+id/countdown_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="47" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/second" />
    </LinearLayout>

    <TextView
        android:id="@+id/time_ago_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="left" />

</LinearLayout>
